--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.1",
     "@astrojs/check": "^0.5.10",
+    "@supabase/supabase-js": "^2.43.1",
+    "astro": "^4.7.1",
     "typescript": "^5.4.5"
   }
 }
