--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/ts-plugin": "^1.6.1",
     "@supabase/supabase-js": "^2.43.1",
     "astro": "^4.7.1",
     "typescript": "^5.4.5"
