--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.6.1",
     "@material/web": "^1.4.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@supabase/supabase-js": "^2.43.1",
     "astro": "^4.7.1",
+    "rollup": "^4.17.2",
+    "tailwindcss": "^3.4.3",
+    "tw-elements": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
