--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "src/env.d.ts"
       ],
       "@layouts/*": [
-        "src/components/layouts/*"
+        "src/layouts/*"
       ],
       "@lib/*": [
         "src/lib/*"
