--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/preact": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.6.1",
     "@material/web": "^1.4.1",
+    "@nanostores/persistent": "^0.10.1",
+    "@nanostores/preact": "^0.5.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@supabase/supabase-js": "^2.43.1",
     "astro": "^4.7.1",
+    "nanostores": "^0.10.3",
+    "preact": "^10.21.0",
     "rollup": "^4.17.2",
     "tailwindcss": "^3.4.3",
-    "tw-elements": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
