--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@testing-library/preact": "^3.2.3",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "happy-dom": "^14.11.0",
     "vitest": "^1.6.0"
   }
