--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@supabase/supabase-js": "^2.43.1",
     "astro": "^4.7.1",
+    "dayjs": "^1.11.11",
     "nanostores": "^0.10.3",
     "preact": "^10.21.0",
     "puppeteer": "^22.8.2",
     "rollup": "^4.17.2",
+    "supermemo": "^2.0.17",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
