--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/preact": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.6.1",
+    "@astrojs/vercel": "^7.6.0",
     "@material/web": "^1.4.1",
     "@nanostores/persistent": "^0.10.1",
     "@nanostores/preact": "^0.5.1",
