⬆ update url auth redirect provider

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 SUPABASE_URL=YOUR_SUPABASE_URL
 SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+SITE_URL="http://localhost:4321/"
 
 TTS_API_URL=YOUR_TTS_API_URL
