fixed formatter input text

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "astrojs",
         "dayjs",
         "efactor",
-        "supermemo"
+        "nanostores",
+        "supermemo",
+        "tailwindcss"
     ]
 }
